# simple-rag

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  chat.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.sh
.github/workflows/: ci.yml
src/: __init__.py
src/cli/: __init__.py  handlers.py  interface.py
src/core/: __init__.py  document_processor.py  local_ai_client.py  rag_system.py  vector_store.py
src/utils/: __init__.py  config.py  file_utils.py  logger.py  text_processor.py
